FIX: (_minor) -- Button iOS color changed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,4 +80,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  color: #000;
 }
